force-app/main/default/objects/lms_hed__LMS_Course_Term__c/fields/Canvas_Course_SIS_Id__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Course_SIS_Id__c</fullName>
    <description>course_sis_id in Canvas</description>
    <externalId>true</externalId>
    <inlineHelpText>course_sis_id in Canvas</inlineHelpText>
    <label>Canvas Course SIS Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>