force-app/main/default/objects/lms_hed__LMS_Course_Term__c/fields/Is_Canvas_Published__c.field-meta.xml
<CustomField>
    <fullName>Is_Canvas_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flip to true when course-term is published in Canvas.</description>
    <inlineHelpText>Flip to true when course-term is published in Canvas.</inlineHelpText>
    <label>Is Canvas Published</label>
    <type>Checkbox</type>
</CustomField>