force-app/main/default/objects/lms_hed__LMS_Course_Term__c/fields/Is_Credit__c.field-meta.xml
<CustomField>
    <fullName>Is_Credit__c</fullName>
    <description>Is this LMS (Canvas) instance for a Credit Course?</description>
    <formula>lms_hed__Course__r.RecordType.DeveloperName = &apos;Credit&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is this LMS (Canvas) instance for a Credit Course?</inlineHelpText>
    <label>Is Credit</label>
    <type>Checkbox</type>
</CustomField>